[package]
name = "ehrust"
version = "0.1.0"
edition = "2021"

[lib]
name = "libeh"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "ehrust"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
scraper = { version = "0.18" }
cookie = { version = "0.18" }
# sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
