[workspace]
members = ["crates/ehrust", "crates/libeh"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.1"
authors = ["pboymt"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = { version = "0.15" }
log = { version = "0.4" }
env_logger = { version = "0.11" }
