[package]
name = "libeh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# dependencies for linux
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10.45", features = ["vendored"] }

# dependencies for ios
[target.'cfg(target_os = "ios")'.dependencies]
openssl = { version = "0.10.45", features = ["vendored"] }

# dependencies for android
[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10.45", features = ["vendored"] }

# dependencies for macos
[target.'cfg(target_os = "macos")'.dependencies]
openssl = { version = "0.10.45", features = ["vendored"] }
