[package]
name = "libeh"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "A rust library for transforming the e-hentai and exhentai content."
license = "GPL-3.0"
homepage = "https://github.com/pboymt/EhRust"
repository = "https://github.com/pboymt/EhRust"
readme = "README.md"
keywords = ["e-hentai", "exhentai", "ehrust", "libeh"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
dotenvy.workspace = true
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
scraper = { version = "0.18" }
cookie = { version = "0.18" }
regex = { version = "1.10.3" }
chrono = { version = "0.4.34", features = ["serde"] }

# sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
